--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,16 @@ before_install:
 script:
   # - docker run nimiq/docker-react npm run test -- --coverage
   - docker run -e CI=true nimiq/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-west-1"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-eu-west-1-477353422995"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
