NEW Section 8 and 9

--- a/section7/.travis.yml
+++ b/section7/.travis.yml
@@ -1,3 +1,5 @@
+# NOTE: this file is indeed supposed to be in the root dir in order for Github to recongnize it.
+
 # language: generic  # In case of error: rakefile not found
 sudo: require
 services:
