--- a/section7/.travis.yml
+++ b/section7/.travis.yml
@@ -1,7 +1,7 @@
 # NOTE: this file is indeed supposed to be in the root dir in order for Github to recongnize it.
 
 # language: generic  # In case of error: rakefile not found
-sudo: require
+sudo: required
 services:
   - docker
 
