NEW Dockerrun.aws.json for Beanstalk

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,16 +25,17 @@ after_success:
   - docker push nimiq/multi-nginx
   - docker push nimiq/multi-server
   - docker push nimiq/multi-worker
-#
-# deploy:
-#   provider: elasticbeanstalk
-#   region: "eu-west-1"
-#   app: "docker-react"
-#   env: "DockerReact-env"
-#   bucket_name: "elasticbeanstalk-eu-west-1-477353422995"
-#   bucket_path: "docker-react"
-#   on:
-#     branch: master
-#   access_key_id: $AWS_ACCESS_KEY
-#   secret_access_key:
-#     secure: "$AWS_SECRET_KEY"
+
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-west-1"
+  app: "multi-docker"
+  env: "MultiDocker-env"
+  bucket_name: "elasticbeanstalk-eu-west-1-477353422995"
+  bucket_path: "docker-multi"
+  on:
+    branch: master
+  access_key_id:
+    secure: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
