NEW Section 18, Skaffold

--- a/section14-15-16-17/complex/k8s/worker-deployment.yaml
+++ b/section14-15-16-17/complex/k8s/worker-deployment.yaml
@@ -15,6 +15,9 @@ spec:
       containers:
         - name: worker
           image: nimiq/multi-worker
+          # Fix for Skaffold error like:
+          # rpc error: code = Unknown desc = Error response from daemon: manifest for nimiq/multi-server:47cdbc606a958b92059529238c01fb9e53694b0e5bc91e31f44d1676900d018d not found
+          imagePullPolicy: IfNotPresent
           env:
             - name: REDIS_HOST
               value: redis-cluster-ip-service
