--- a/section14-15-16-17/complex/k8s/client-deployment.yaml
+++ b/section14-15-16-17/complex/k8s/client-deployment.yaml
@@ -15,5 +15,8 @@ spec:
       containers:
         - name: client
           image: nimiq/multi-client
+          # Fix for Skaffold error like:
+          # rpc error: code = Unknown desc = Error response from daemon: manifest for nimiq/multi-server:47cdbc606a958b92059529238c01fb9e53694b0e5bc91e31f44d1676900d018d not found
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 3000
